# papilio

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  PROGRESS.md  README.md  REF_ARCH_TDD.md  START.md  docker-compose.yml  repro_encoding.rs
.sqlx/: query-04961b240631fa89ac1f9bbe5bd32919d4b339de6577b5da7d771507d534b998.json  query-0cc0cd6679a403d951dd0539a5830a761b3b89434444df9be3a4729872f992dd.json  query-155ad2f3fc82c363388165b86974eefa38157a0d3feda83ce72e9f1c1ea73b9f.json  query-22da74af5873f66f166c7e360b83d32091f3c25f183f2eb5fcddef54d260c5cc.json  query-3164569859d6b3d54a889e54f9362dcef5cfeb0e09f077b0373deb88be84ebe1.json  query-36e9e2e6400b7c1b02f0b5ba857fb915389423039a941e4057843033e56aca3b.json  query-3a0725cf579a71d8619aa5a890dc33e7ff4fd9832b15b13a3bc3557c3ef06852.json  query-4400d823b20b8fe1797dbc9e0f5128530afb840ce788d2aa32b10fd84d33de79.json  query-46fd92974815da100f989d8ce14d3407b5403031a9ef29e4185c7886c9fed52a.json  query-486ae15afa95f10b5d6432379f7224af02afbb538774b1d44632de11170e0c9f.json  query-51093187f89c4d6057f1d40cac36a6d6fa64d298b593b3a020e9465fda29367c.json  query-5a09a2903c4a707890ff283d89d40fa9689fb8bed2f38cea2dc8563f2b8b0c39.json  query-6613d42239f9ab047663d2e3f74b19d1b6c4474cb2f54ec492d2d61a3e09b040.json  query-6b1f020850e436c1f11e01041e8b4d122f575e3204f1624fd3f136ad2750ba0f.json  query-6f9f632283dcc6ca6cf1a2869cb0de40298a7678acb6be70d7179e81849cfa9a.json  query-72e93800ee8eba378828a296883dfd475b9691469c7020ed3736ecf7bd167d6c.json  query-73591af5e34105cc5d1ff6f8375bdd7e6da9a307f9aeaa28ca3eb26f951fff91.json  query-77d21330eeddc3297d36361fe7ab4b3dd5132bdcb8acdad06d5c3023a9de465a.json  query-79a3d62e50fe7fb65d094cfa0218a2afcbb57acb299d8ae67ac03edf86e20d09.json  query-7bec9b45f6bf3737fea13e2392f99503f395c45042c0f11a36448bf49d6be5c1.json  query-828b445c0902bb3b7e5acab4c97ecaa31980e289c8a4c6278292b5cbc3c4844e.json  query-88f2ec558063ec9296828b737c8f5baabaa3992c33e93643461700d98442f00d.json  query-8b9a315c932f0c34f4c537def95104eab3955684bc095bab50f6679752fad582.json  query-949ab11d76bc298f983e9944e1bfcb03d8435cef95e994b0e108f9c753b4fe6c.json  query-9a812fca6529aa7beb14901d0b1511e232f8157b06b7a249e8d7c46bc6bdfccd.json  query-9af0aabb8c9c0370f4fe699477113eebcabef3f4e612f1ddd039a7ea6c797625.json  (+14 more)
database/: audit_alignment.sql
docs/: docker_deployment.md  (+10 more)
papilio-core/: Cargo.toml  README.md
papilio-core/migrations/: 20260206000000_init_schema.sql  20260206000001_multi_user.sql  20260206000002_add_lyrics.sql  20260207150000_create_scan_status.sql  20260207160000_create_playback_sync.sql  20260209000000_add_user_track_metadata.sql  20260210000000_add_ai_lyrics.sql  20260212000000_add_nickname.sql  20260212000001_add_user_avatar.sql  20260213000000_lyrics_v2_refactor.sql  20260214000000_add_unique_constraints.sql  20260215000000_add_sync_v4_anchors.sql  20260215000001_add_word_alignment.sql  20260215000002_add_system_config.sql  20260217000000_add_artist_sync_status.sql
papilio-core/src/: error.rs  lib.rs
papilio-core/src/auth/: jwt.rs  password.rs
papilio-core/src/metadata/: mod.rs
papilio-core/src/scanner/: mod.rs  organizer.rs
papilio-server/: Cargo.toml  README.md
papilio-server/src/: lib.rs  main.rs
papilio-server/src/handlers/: admin.rs  auth.rs  mod.rs  music.rs  playlist.rs
papilio-server/src/routes/: mod.rs
papilio-server/tests/: lyric_sync_test.rs
papilio-web/: Cargo.toml  README.md  index.html  tailwind.config.js
papilio-web/pkg/: papilio-web.d.ts  papilio-web.js  papilio-web_bg.wasm  papilio-web_bg.wasm.d.ts
papilio-web/src/: main.rs
(+63 files in other folders)
