[workspace]
members = [
    "papilio-server",
    "papilio-core",
    "papilio-web",
]
resolver = "2"
version = "0.1.0"

[workspace.dependencies]
redis = { version = "1.0", features = ["tokio-rustls-comp", "connection-manager"] }
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
postage = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chobits_sherpa_rs = { package = "chobits-sherpa-rs", version = "0.7.0" }
hound = "3.5.1"
rustfft = "6.2.0"
ndarray = "0.16.1"
dashmap = "6.1.0"
infer = "0.16"
sanitize-filename = "0.6"
once_cell = "1.19"

