[package]
name = "papilio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
postage.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json = "1.0"

# 认证与安全
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# 音频处理相关
lofty = "0.21"
symphonia = { version = "0.5", features = ["all"] }
walkdir = "2"
thiserror = "2.0.18"
musicbrainz_rs = "0.12"
reqwest = { version = "0.11", features = ["json"] }
tokio-retry = "0.3"
md5 = "0.7"
dashmap.workspace = true
infer.workspace = true
sanitize-filename.workspace = true
futures = "0.3"
regex = "1.12.3"
urlencoding = "2.1"
once_cell = "1.19"
encoding_rs = "0.8"

