[package]
name = "papilio-server"
version = "0.1.0"
edition = "2021"

[dependencies]
papilio-core = { path = "../papilio-core" }
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
redis = { workspace = true }
futures-util = "0.3"
tokio-util = { version = "0.7.18", features = ["io"] }
mime_guess = "2.0.5"
infer.workspace = true
sanitize-filename.workspace = true
regex = "1"
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
