[package]
name = "papilio-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlAudioElement", "Storage", "Window", "HtmlInputElement", "File", "FileList", "FormData", "Blob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
# lucide-leptos = "0.1" # 移除
thiserror = "2.0.18"
uuid = { workspace = true, features = ["v4", "serde", "js"] }
regex = "1.12.3"

[package.metadata.leptos]
# 样式输出文件路径
style-file = "style/output.css"
# 项目名称
bin-package = "papilio-web"
# 目标三元组
target-triple = "wasm32-unknown-unknown"
